# English_Practice

./: .gitignore  README.md  app.py  eng_speaking.py  prompt.py  pyproject.toml  requirements.txt
static/: app.js
templates/: index.html
